service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-tutorial
spec:
  selector:
    app: java-tutorial
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
